# UVTestRepo

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
src/uvtestrepo/: __init__.py
tests/: test_smoke.py
