[project]
name = "uvtestrepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "numpy>=2.4.0",
    "ollama>=0.6.1",
    "streamlit>=1.52.2",
    "torch>=2.9.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
  "ruff>=0.9",
  "mypy>=1.10",
  "pytest>=8.0",
  "pre-commit>=3.7",
]

[build-system]
requires = ["uv_build>=0.7.3"]
build-backend = "uv_build"

[tool.ruff]
line-length=160

[tool.ruff.lint]
extend-select = ["ALL",]
ignore = ["D404", "S101"]
fixable = ["ALL",]